deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
