deploy/petclinic-multiarch.yml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: petclinic
  name: petclinic
spec:
  ports:
  - name: main
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: petclinic
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: petclinic
      port:
        number: 8080
